--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,57 @@
+/* Mobile */
 h1 {
     text-align: center;
 }
 div#catalogo-main {
     width: 100%;
 }
-div.content-img {
-    width: 90%;
-    margin: 0 auto 0 auto;
-    background-color: darkgray;
+/* Mobile */
+@media only screen and (max-width: 767px) {
+    div.content-img {
+        width: 90%;
+        margin: 0 auto 0 auto;
+    /*     background-color: darkgray; */
+    }
+    img.catalogo {
+        width: 95%;
+        display: block;
+        margin: 0 auto 0 auto;
+        margin-bottom: 1.3em;
+    }
 }
-img.catalogo {
-    width: 95%;
-    display: block;
-    margin: 0 auto 0 auto;
-    margin-bottom: 1.3em;
+/* Tablet, Ipad... */
+@media only screen and (min-width: 768px) 
+and (max-width: 1023px) {
+    div.content-img {
+        width: 32%;
+        float: left;
+       /*  margin: 0 auto 0 auto; */
+        margin-left: 1%;
+        margin-bottom: 1.3em;
+       /*  background-color: darkgray; */
+    }
+    img.catalogo {
+        width: 95%;
+/*         float: left; */
+        display: block;
+        margin: 0 auto 0 auto;
+        
+    }
+}
+@media only screen and (min-width: 1024px) 
+ {
+    div.content-img {
+        width: 23%;
+        float: left;
+/*         margin: 0 auto 0 auto; */
+        margin-left: 1.6%;
+        margin-bottom: 1.3em;
+/*         background-color: darkgray; */
+    }
+    img.catalogo {
+        width: 95%;
+/*         float: left; */
+        display: block;
+        margin: 0 auto 0 auto;
+    }
 }
