--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
-/* Mobile */
+/* Todos los dispositivos */
 h1 {
     text-align: center;
 }
 div#catalogo-main {
     width: 100%;
 }
-/* Mobile */
+/* Mobil */
 @media only screen and (max-width: 767px) {
     div.content-img {
         width: 90%;
         margin: 0 auto 0 auto;
+        
     /*     background-color: darkgray; */
     }
     img.catalogo {
@@ -25,32 +26,28 @@ and (max-width: 1023px) {
     div.content-img {
         width: 32%;
         float: left;
-       /*  margin: 0 auto 0 auto; */
         margin-left: 1%;
         margin-bottom: 1.3em;
        /*  background-color: darkgray; */
     }
     img.catalogo {
         width: 95%;
-/*         float: left; */
         display: block;
         margin: 0 auto 0 auto;
         
     }
 }
+/* PC portatil y de escritorio */
 @media only screen and (min-width: 1024px) 
  {
     div.content-img {
         width: 23%;
         float: left;
-/*         margin: 0 auto 0 auto; */
         margin-left: 1.6%;
         margin-bottom: 1.3em;
-/*         background-color: darkgray; */
     }
     img.catalogo {
         width: 95%;
-/*         float: left; */
         display: block;
         margin: 0 auto 0 auto;
     }
