--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,41 @@
 /* Todos los dispositivos */
+body {
+    background-color: rgb(235,235,235);
+}
 h1 {
     text-align: center;
+    font-family: lato;
+    color: rgb(64,64,64);
+}
+h3, p {
+    text-align: center;
+}
+p {
+    position: relative;
+    top: -1em;
+}
+img.catalogo {
+    width: 100%;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
 }
 div#catalogo-main {
     width: 100%;
 }
+div.content-img {
+    background-color: white;
+    max-width: 400px;
+    border-radius: 15px;
+}
 /* Mobil */
 @media only screen and (max-width: 767px) {
     div.content-img {
-        width: 90%;
+        width: 95%;
         margin: 0 auto 0 auto;
         
     /*     background-color: darkgray; */
     }
     img.catalogo {
-        width: 95%;
         display: block;
         margin: 0 auto 0 auto;
         margin-bottom: 1.3em;
@@ -31,7 +52,6 @@ and (max-width: 1023px) {
        /*  background-color: darkgray; */
     }
     img.catalogo {
-        width: 95%;
         display: block;
         margin: 0 auto 0 auto;
         
@@ -47,8 +67,19 @@ and (max-width: 1023px) {
         margin-bottom: 1.3em;
     }
     img.catalogo {
-        width: 95%;
         display: block;
         margin: 0 auto 0 auto;
     }
+}
+iframe {
+    display: block;
+}
+.tablet {
+    width: 768px;
+    height: 520px;
+}
+.movil {
+    display: block;
+    width: 320px;
+    height: 520px;
 }
