--- a/css/menu-iconos.css
+++ b/css/menu-iconos.css
@@ -19,6 +19,7 @@ nav {
     left: -18em;
     padding-top: 3em;
     top: 0;
+    transition: all 1s;
     height: 100%;
     /* El menú debe quedar por debajo del toggle(ícono hamburguesa) */
     z-index: 5;
@@ -36,35 +37,27 @@ nav {
     text-transform: uppercase;
     display: block;
     width: 100%;
+    transition: all .5s;
+}
+.menu li {
+    box-shadow: 3px 0 rgba(255,255,225, .2) inset;
+    padding-left: 1.5em;
+    margin-right: 10px;
+}
+.menu li:hover {
+    box-shadow: 17em 0 rgba(255,255,225, .2) inset;
+}
+.menu a:hover {
+    margin-left: 1em;
 }
 .menu li a span {
     margin-left: 9px;
 }
-a {
-    text-decoration: none;
-    color: rgb(64,64,64);
-    font-size: 24px;
-}
-li {
-    list-style: none;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
 li.items {
     color: whitesmoke;
 }
-span {
-    padding: 15px;
-    color: whitesmoke;
-}
 .fa-bars {
-    color: whitesmoke;
-}
-.fas {
-    color: whitesmoke;
-}
-.fab {
-    color: whitesmoke;
+    color: white;
 }
 nav.mostrar {
     left: 0;
