--- a/css/mi-bootstrap.css
+++ b/css/mi-bootstrap.css
@@ -11,3 +11,25 @@ img {
 .margen-botones {
     margin: 5px;
 }
+span.big-font {
+     font-size: 1em;
+    float: right;
+    
+   /* margin-bottom: 5px; */
+    /* padding: 4px; */
+}
+.insignias {
+    width: 25%;
+    float: left;
+}
+p {
+    clear: both;
+}
+.inline-space {
+    /*     margin-bottom: 10px;
+        padding: 15px; */
+    line-height: 2em;
+}
+h2 {
+    clear:both;
+}
